# call_charges_api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
call_charges_api/: app.py
call_charges_api/api/v1/errors/: error_handlers.py
call_charges_api/api/v1/routes/: auth.py  call_record.py  phone_bill.py
call_charges_api/api/v1/schemas/: call_record.py  phone_bill.py  user.py
call_charges_api/domain/entities/: call_record.py  phone_bill.py
call_charges_api/domain/errors/: exceptions.py
call_charges_api/domain/use_cases/: auth.py  get_phone_bill.py  register_call.py  save_phone_bill.py
call_charges_api/infra/config/: security.py  settings.py
call_charges_api/infra/db/: session.py
call_charges_api/infra/models/: call_record.py  phone_bill.py  user.py
call_charges_api/infra/sqlalchemy_repos/: sqlalchemy_call_record_repository.py  sqlalchemy_phone_bill_repository.py  sqlalchemy_user_repository.py
call_charges_api/repositories/: call_record_repository.py  phone_bill_repository.py  user_repository.py
migrations/: env.py
migrations/versions/: 003fbda943bc_create_phone_bills_table.py  1d106380f117_create_relationship.py  93f8779bde46_create_call_records_table.py  b7017fa124d6_create_user_table.py  bcac2f94311d_add_field_status_in_call_records.py  c8c2528e60d6_remove_field_total_amount.py
tests/: conftest.py  test_app.py  test_app_call_records.py  test_app_phone_bill.py  test_auth.py  test_call_record.py  test_cases.py  test_phone_bill.py  test_security.py
